# temporalio-playground

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  README_SCHEDULER.md  README_TEST_WORKER.md  flake.nix  pyproject.toml
compose/: MONITORING.md  README.md  config_cassandra.yaml  config_sql.yaml  docker-compose-cass-es.yaml  docker-compose-mysql-es-py-worker.yaml  docker-compose-mysql-es.yaml
compose/dynamicconfig/: dynamic_config_cass.yaml  dynamic_config_sql.yaml
compose/monitoring/: prometheus.yml
compose/monitoring/grafana/dashboards/: elasticsearch-overview.json  prometheus-stats.json
compose/monitoring/grafana/provisioning/dashboards/: dashboard.yml
compose/monitoring/grafana/provisioning/datasources/: datasource.yml
infra/test-sheduler/: start.sh
infra/test-worker/: start.sh
playground/: __init__.py
playground/apps/test_sheduler/: container.py  main.py  settings.py
playground/apps/test_worker/: README.md  container.py  main.py  settings.py
playground/infra/: utils.py
playground/infra/temporalio_utils/: container.py  service.py  settings.py
playground/services/: __init__.py
playground/services/scheduler/: README.md  __init__.py  container.py  example.py  service.py
playground/tasks/: activities.py  shared.py  workflows.py
